--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/total_price_with_tax_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/total_price_taxes_included"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tax_price_textView" />
+
+    <TextView
+        android:id="@+id/tax_price_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="2dp"
+        android:text="@string/taxes"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toppings_price_textView" />
+
+    <TextView
+        android:id="@+id/toppings_price_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/toppings"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/delivery_switch" />
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="74dp"
@@ -57,21 +90,23 @@
         android:id="@+id/size_choice_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="25dp"
         android:text="@string/choose_pizza_size"
         android:textColor="#020202"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_pizza" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pizza_spinner"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
         android:id="@+id/topping_choice_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="5dp"
         android:text="@string/choose_pizza_toppings"
         android:textColor="#020202"
         android:textSize="20sp"
@@ -96,29 +131,32 @@
         android:id="@+id/user_pizza_choice_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="304dp"
+        android:layout_marginStart="127dp"
         android:layout_marginTop="64dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="107dp"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pizza_choice_textView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/pizza_spinner"
         android:layout_width="183dp"
         android:layout_height="48dp"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="88dp"
+        android:layout_marginEnd="224dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pizza_choice_textView"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/image_pizza"
-        android:layout_width="182dp"
-        android:layout_height="134dp"
-        android:layout_marginStart="112dp"
+        android:layout_width="183dp"
+        android:layout_height="143dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="2dp"
         android:contentDescription="@string/pizza_type_description"
         android:scaleType="centerCrop"
@@ -128,11 +166,12 @@
 
     <RadioGroup
         android:id="@+id/size_radioGroup"
-        android:layout_width="396dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
+        android:layout_width="150dp"
+        android:layout_height="148dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.839"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/size_choice_textView">
 
@@ -155,17 +194,19 @@
             android:id="@+id/xlarge_pizza_radioButton"
             android:layout_width="129dp"
             android:layout_height="wrap_content"
+            android:minHeight="48dp"
             android:onClick="selectSize"
             android:text="@string/xlrg_pizza" />
     </RadioGroup>
 
     <RadioGroup
         android:id="@+id/toppings_radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="395dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="6dp"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topping_choice_textView">
 
@@ -205,9 +246,9 @@
 
     <RadioGroup
         android:id="@+id/toppings2_radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
+        android:layout_width="300dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="4dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toppings_radioGroup">
@@ -242,10 +283,13 @@
         android:id="@+id/delivery_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="195dp"
         android:minHeight="48dp"
+        android:onClick="delivery"
         android:text="@string/switch_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/topping_choice_textView2"
         app:layout_constraintTop_toBottomOf="@+id/toppings2_radioGroup" />
 
@@ -254,10 +298,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
         android:text="@string/total_price"
-        android:textSize="34sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topping_choice_textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/delivery_switch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
